# psitta

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-EXTENSIONS  OPEN_CORE_BOUNDARY.md  PSITTA_BIBLE.md  README.md  SECURITY.md  compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  psitta.appinstaller
.backups/phase4-d11/: ARCHITECTURE.md.bak  (+7 more)
.claude/: .gitignore  settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Devlog/: Psitta_DevLog_2026-02-12.docx  Psitta_DevLog_2026-02-15.docx  Psitta_DevLog_2026-02-15_D19.docx  Psitta_DevLog_2026-02-16_D22b.docx  Psitta_DevLog_2026-02-16_D23-D26.docx  Psitta_Dev_Log_2026-02-22.docx
core/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
core/backend/_a4_stripe/: .gitignore  A4_STRIPE_RUNBOOK.md  key_util.py  stripe_audit.py  stripe_migrate.py  stripe_rollback.py  stripe_seed_test.py
core/backend/_a4_stripe/rollback_records/: live_catalog_migration_2026-07-20.json
core/backend/scripts/: audit_elevenlabs_voices.py  backfill_stripe_customer_emails.py  backfill_subscription_periods.py  backfill_user_subscriptions.py  check_blueprint_narrative.py  cleanup_stale_sandbox_subscriptions.py  diagnose_subscription_details.py  diagnose_subscription_sources.py  grant_tester.py  list_accounts.py  revoke_dev_override_luisaao.py  seed_welcome.py  set_config.py  setup_stripe_prices.py  sync_elevenlabs_voices.py
core/backend/src/psitta/: __init__.py  config.py  dependencies.py  main.py
core/backend/src/psitta/api/: __init__.py
core/backend/src/psitta/api/v1/: __init__.py  auth.py  billing.py  blueprints.py  config.py  contact.py  documents.py  notes.py  playback.py  project_blueprints.py  projects.py  router.py  signup.py  subscriptions.py  tts.py  users.py  voices.py  waitlist.py
core/backend/src/psitta/db/: __init__.py  base.py  session.py
core/backend/src/psitta/db/migrations/: __init__.py  env.py  script.py.mako
core/backend/src/psitta/db/migrations/versions/: 001_initial_schema.py  002_add_word_count.py  003_add_projects.py  004_chunk_edit_fields.py  005_add_cover_fields.py  006_add_project_cover.py  007_add_auth0_user_id.py  008_add_admin_tier.py  009_subscription_plans.py  010_add_formatted_content.py  011_audit_log_append_only.py  012_stripe_billing_tables.py  013_contact_submissions.py  014_signup_list.py  015_add_chunk_positions.py  016_signup_list_first_name_nullable.py  017_subscriptions_active_unique.py  018_el_usage_counters.py  019_tester_allowlist.py  020_stage2_email_backfill_and_auth0_purge.py  021_blueprints.py  022_seed_system_blueprints.py  023_llm_usage_counters.py  024_widen_plan_id_enum.py  025_users_welcome_seeded.py  026_users_avatar_and_quote.py  027_notes.py  028_blueprint_narrative_origin.py  029_project_narrative.py  030_document_narrative_beat.py  031_reverse_trial_grants.py  032_app_config.py  __init__.py
core/backend/src/psitta/i18n/: __init__.py  blueprint_i18n.py
core/backend/src/psitta/middleware/: __init__.py  auth.py  pii_scrubber.py  rate_limit.py  rbac.py  request_id.py
core/backend/src/psitta/models/: __init__.py  billing.py  blueprint.py  contact.py  domain.py  signup.py
core/backend/src/psitta/providers/: __init__.py  audio_loudness.py  edge_alignment.py  llm_openai.py  storage_s3.py  tone_rule_based.py  tts_azure.py  tts_edge.py  tts_elevenlabs.py  tts_errors.py  tts_router.py  tts_router_maps.py  vision_anthropic.py  voice_catalog_static.py
core/backend/src/psitta/providers/interfaces/: __init__.py  contracts.py
core/backend/src/psitta/schemas/: __init__.py  api.py
core/backend/src/psitta/seeds/welcome/: Bringing_In_Web_Content.html  Ebooks_Listen_to_Your_Books.epub  Markdown_For_Writers.md  Plain_Text_Quick_Notes.txt  Welcome_to_the_Writing_Nook.docx  manifest.json
core/backend/src/psitta/services/: __init__.py  app_config.py  audio_cache.py  audit_service.py  billing_handlers.py  blueprint_coherence.py  blueprint_service.py  capabilities.py  document_service.py  llm_service.py  loops_service.py  narrative_coach_service.py  plan_limits.py  playback_service.py  seed_service.py  structure_analysis_service.py  subscription_service.py  tester_allowlist.py  trial_service.py
core/backend/src/psitta/workers/: __init__.py  document_processor.py
core/backend/tests/: conftest.py  factories.py
core/backend/tests/e2e/: test_document_flow.py
core/backend/tests/integration/: conftest.py  test_audit_log_append_only.py  test_blueprint_api.py  test_blueprint_overview_api.py  test_blueprint_part_api.py  test_blueprint_write_api.py  test_document_api.py  test_placement_api.py  test_playback_api.py  test_project_blueprint_api.py  test_project_read_api.py  test_user_api.py  test_voice_api.py
core/backend/tests/unit/: test_app_config.py  test_audio_loudness_sample_rate.py  test_billing_catalog.py  test_billing_handlers.py  test_billing_portal_session.py  test_billing_status_resolver.py  test_blueprint_coherence.py  test_blueprint_service.py  test_capabilities.py  test_chunk_log_summary.py  test_dependencies.py  test_document_service.py  test_edge_alignment.py  test_export_branded_docx.py  test_grant_tester.py  test_llm_quota.py  test_plan_limits.py  test_plan_override_auth.py  test_playback_service.py  test_resolver.py  test_schemas.py  test_summarize_endpoint.py  test_tester_allowlist.py  test_tts_router_dispatch.py  test_tts_router_streaming.py
core/backend/tests/unit/test_middleware/: test_client_version.py  test_rate_limit.py  test_request_id.py
devops/: Psitta_DevLog_2026-02-08.docx
docs/: API.md  COST_AND_SCALE.md  DELIVERABLE_X_REPO_BOOTSTRAP.md  OBSERVABILITY.md  PRD.md  Psitta_Logging_Security_Compliance_Guide_v1.md  Psitta_Product_Audit_2026-06-20.docx  Psitta_Product_Audit_2026-06-20_v2.docx  RELEASE_NOTES_2_0_0.md  RUNBOOK_client_account_access.md  SECURITY_HARDENING.md  TESTING.md  WRITING_NOOK_MAP.md
extensions/: README.md
scripts/: bootstrap.sh  reset-db.sh  seed-data.sh
(+347 files in other folders)
